--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,7 @@ dependencies = [
     "langchain>=1.2.6",
     "langchain-groq>=1.1.1",
     "langchain-ollama>=1.0.1",
+    "langchain-tavily>=0.2.17",
     "python-dotenv>=1.2.1",
+    "tavily-python>=0.7.19",
 ]
